# GitHub

./: .gitignore  AGENTS.md  verify.sh
.dev-tools/: PORTFOLIO.md  PORTFOLIO.md.backup_before_standardization  execute-commits.sh  setup-dmg-for-all-projects.sh  universal_dmg.sh
.qoder/repowiki/en/content/: Advanced Features.md  Appendix.md  Configuration.md  Development.md  Getting Started.md  Introduction.md  Troubleshooting.md  User Interface.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Configuration API.md  DownloadQueue API.md  FourChanScraper API.md  MainWindow API.md  MediaFile API.md  Worker Threads API.md
.qoder/repowiki/en/content/Core Features/: Core Features.md  Download Management.md  Duplicate Detection.md  File Organization.md  Resume Capability.md  URL Processing.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.razorcore/: README.md  pyproject.toml  universal-build.sh
.razorcore/src/razorcore/: __init__.py  appinfo.py  config.py  filesystem.py  logging.py  updates.py
.razorcore/src/razorcore/cli/: __init__.py  commands.py  main.py
.razorcore/src/razorcore/styling/: __init__.py  themes.py  widgets.py
Czkawka_MacOS_Guide/: README.md
LibraLog/: DMG_BUILD_README.md  README.md  dmg-config.json  pyproject.toml
LibraLog/pick a icns/: libralog icns 1.icns  libralog icns 2.icns  libralog icns 3.icns
LibraLog/src/libralog/: __init__.py  main.py
LibraLog/src/libralog/core/: __init__.py
LibraLog/src/libralog/gui/: __init__.py
LibraLog/src/libralog/utils/: __init__.py
razorcore/: README.md  pyproject.toml  universal-build.sh
razorcore/src/razorcore/: __init__.py  threading.py
razorcore/src/razorcore/cli/: commands.py  main.py
razorcore/src/razorcore/configs/: __init__.py
razorcore/src/razorcore/styling/: __init__.py  widgets.py
